Header section completed.

--- a/index.html
+++ b/index.html
@@ -7,8 +7,11 @@
     <title>Document</title>
   </head>
   <body>
-    <main id="main">
-      <h1 id="title">Dr. Norman Borlaug</h1>
+    <main id="main" class="center">
+      <header class="center header">
+        <h1 id="title">Dr. Norman Borlaug</h1>
+        <p>The man who saved a billion lives</p>
+      </header>
       <div id="img-div">
         <img
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
@@ -39,13 +42,11 @@
             <span id="bold">1937 </span> - Marries wife of 69 years Margret
             Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles
             Stakman, he returns to school study under Stakman, who teaches him
-            about breeding pest-resistent plants.
-          </li>
-          <li>
-            <span id="bold">1938 </span> - Tries to enroll in the military after
-            the Pearl Harbor attack, but is rejected. Instead, the military
-            asked his lab to work on waterproof glue, DDT to control malaria,
-            disinfectants, and other applied science.
+            about breeding pest-resistent plants. <span id="bold">1938 </span> -
+            Tries to enroll in the military after the Pearl Harbor attack, but
+            is rejected. Instead, the military asked his lab to work on
+            waterproof glue, DDT to control malaria, disinfectants, and other
+            applied science.
           </li>
 
           <i>
