image div completed.

--- a/index.html
+++ b/index.html
@@ -12,16 +12,16 @@
         <h1 id="title">Dr. Norman Borlaug</h1>
         <p>The man who saved a billion lives</p>
       </header>
-      <div id="img-div">
+      <div id="img-div" class="center">
         <img
           src="https://cdn.freecodecamp.org/testable-projects-fcc/images/tribute-page-main-image.jpg"
           alt="some-image"
           id="image"
         />
-        <p id="img-caption">
+        <div id="img-caption">
           Dr. Norman Borlaug, third from the left, trains biologists in Mexico
           on how to increase wheat yields - part of his life-long war on hunger.
-        </p>
+        </div>
       </div>
       <div id="tribute-info">
         <h2>Here's a time line of Dr. Borlaug's life:</h2>
