--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
           on how to increase wheat yields - part of his life-long war on hunger.
         </div>
       </div>
-      <div id="tribute-info">
+      <div id="tribute-info" class="center">
         <h2>Here's a time line of Dr. Borlaug's life:</h2>
-        <ul>
+        <!-- <div class="ul-list"> -->
+        <ul class="list">
           <li><span id="bold">1914</span> - Born in Cresco, Iowa</li>
           <li>
             <span id="bold">1933 </span> - Leaves his family's farm to attend
@@ -42,13 +43,16 @@
             <span id="bold">1937 </span> - Marries wife of 69 years Margret
             Gibson. Gets laid off due to budget cuts. Inspired by Elvin Charles
             Stakman, he returns to school study under Stakman, who teaches him
-            about breeding pest-resistent plants. <span id="bold">1938 </span> -
-            Tries to enroll in the military after the Pearl Harbor attack, but
-            is rejected. Instead, the military asked his lab to work on
-            waterproof glue, DDT to control malaria, disinfectants, and other
-            applied science.
+            about breeding pest-resistent plants.
           </li>
-
+          <li>
+            <span id="bold">1938 </span> - Tries to enroll in the military after
+            the Pearl Harbor attack, but is rejected. Instead, the military
+            asked his lab to work on waterproof glue, DDT to control malaria,
+            disinfectants, and other applied science.
+          </li>
+        </ul>
+        <div id="description-li">
           <i>
             "Borlaug's life and achievement are testimony to the far-reaching
             contribution that one man's towering intellect, persistence and
@@ -57,7 +61,8 @@
             <br />
             --Indian Prime Minister Manmohan Singh
           </i>
-        </ul>
+        </div>
+        <!-- </div> -->
       </div>
       <div id="additional-link">
         <h2>
